fix lightbox and touch controls to collapse

--- a/assets/sass/_theme/blocks/gallery.sass
+++ b/assets/sass/_theme/blocks/gallery.sass
@@ -84,11 +84,11 @@
                 margin-right: calc(var(--grid-gutter) / 2)
                 picture
                     img
-                        height: $block-gallery-carousel-max-height
-                        width: auto
+                        height: $block-gallery-carousel-height
                         max-width: none
+                        width: auto
                         @include media-breakpoint-up(desktop)
-                            height: $block-gallery-carousel-max-height-desktop
+                            height: $block-gallery-carousel-height-desktop
         .block-gallery + &,
         .block-pages--cards + &
             margin-top: 0
