--- a/assets/sass/_theme/components/lightbox.sass
+++ b/assets/sass/_theme/components/lightbox.sass
@@ -8,6 +8,7 @@
     position: fixed
     right: 0
     top: 0
+    touch-action: manipulation
     z-index: $zindex-lightbox
     &.is-opened
         display: block
