--- a/assets/sass/_theme/components/slider.sass
+++ b/assets/sass/_theme/components/slider.sass
@@ -1,9 +1,10 @@
 .slider
     --slider-pagination-interval: 2s // This value is override by slider javascript
     --slider-transition-duration: 0.25s // This value is override by slider javascript
-    &.is-grabbed
+    &.is-grabbing
         .slider-list
             transition: none
+            user-select: none
     &:not(.is-ready)
         display: none !important
     &-list
